--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,15 @@
-p.map 
-{
-    line-height: 70%;
+p.map {
+    line-height: 100%;
+    word-spacing: -2.5px;
     letter-spacing: -2.5px;
 }
-html, body
-{
+
+span {
+    background-color: rgba(233, 224, 224, 0.979);
+}
+
+html,
+body {
     width: 100%;
     height: 100%;
 }
